--- a/GLProject/GLProject.vcxproj.filters
+++ b/GLProject/GLProject.vcxproj.filters
@@ -51,5 +51,8 @@
     <Image Include="awesomeface.png">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="kanae.png">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
