--- a/GLProject/GLProject.vcxproj
+++ b/GLProject/GLProject.vcxproj
@@ -88,7 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>E:\OPENgl\glfw-3.3.6.bin.WIN32\include;E:\OPENgl\glew-2.1.0\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\OPENgl\glm;E:\OPENgl\glfw-3.3.6.bin.WIN32\include;E:\OPENgl\glew-2.1.0\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -105,7 +105,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>E:\OPENgl\glfw-3.3.6.bin.WIN32\include;E:\OPENgl\glew-2.1.0\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\OPENgl\glm;E:\OPENgl\glfw-3.3.6.bin.WIN32\include;E:\OPENgl\glew-2.1.0\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -122,7 +122,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>E:\OPENgl\glfw-3.3.6.bin.WIN32\include;E:\OPENgl\glew-2.1.0\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\OPENgl\glm;E:\OPENgl\glfw-3.3.6.bin.WIN32\include;E:\OPENgl\glew-2.1.0\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -139,7 +139,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>E:\OPENgl\glfw-3.3.6.bin.WIN32\include;E:\OPENgl\glew-2.1.0\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\OPENgl\glm;E:\OPENgl\glfw-3.3.6.bin.WIN32\include;E:\OPENgl\glew-2.1.0\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -151,11 +151,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="GLGeometry.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Shader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="GLGeometry.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
@@ -171,7 +173,6 @@
   <ItemGroup>
     <Image Include="awesomeface.png" />
     <Image Include="container.jpg" />
-    <Image Include="kanae.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
