--- a/GLProject/GLProject.vcxproj
+++ b/GLProject/GLProject.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -155,6 +155,7 @@
     <ClCompile Include="GLGeometry.cpp" />
     <ClCompile Include="GLProgram.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Material.cpp" />
     <ClCompile Include="MyGLHelper.cpp" />
     <ClCompile Include="Shader.cpp" />
   </ItemGroup>
@@ -162,6 +163,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="GLGeometry.h" />
     <ClInclude Include="GLProgram.h" />
+    <ClInclude Include="Material.h" />
     <ClInclude Include="MyGLHelper.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
