--- a/GLProject/GLProject.vcxproj
+++ b/GLProject/GLProject.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="GLGeometry.cpp" />
     <ClCompile Include="GLProgram.cpp" />
+    <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="MyGLHelper.cpp" />
@@ -163,6 +164,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="GLGeometry.h" />
     <ClInclude Include="GLProgram.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="MyGLHelper.h" />
     <ClInclude Include="Shader.h" />
@@ -171,6 +173,7 @@
   <ItemGroup>
     <None Include="basicLight.fs" />
     <None Include="basicLight.vs" />
+    <None Include="DirectionalLight.fs" />
     <None Include="fshader.fs">
       <FileType>Document</FileType>
     </None>
@@ -179,6 +182,7 @@
     <None Include="LightMap.fs" />
     <None Include="LightMap.vs" />
     <None Include="mat1.fs" />
+    <None Include="PointLight.fs" />
     <None Include="vshader.vs">
       <FileType>Document</FileType>
     </None>
